--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,7 @@
 {
     "name": "silber/bouncer",
-    "description": "Bouncer handles roles and abilities for Eloquent models.",
-    "keywords": [
-        "abilities",
-        "acl",
-        "capabilities",
-        "eloquent",
-        "laravel",
-        "permissions",
-        "roles"
-    ],
+    "description": "Bouncer handles roles and abilities for Laravel's ACL.",
+    "keywords": ["laravel", "acl", "roles", "abilities", "capabilities", "permissions"],
     "license": "MIT",
     "authors": [
         {
@@ -26,19 +18,18 @@
         "classmap": ["tests"]
     },
     "require": {
-        "illuminate/auth": "5.1.20 - 5.4",
-        "illuminate/container": "5.1.20 - 5.4",
-        "illuminate/contracts": "5.1.20 - 5.4",
-        "illuminate/database": "5.1.20 - 5.4"
+        "illuminate/auth": "~5.1.20|5.2.*",
+        "illuminate/container": "~5.1.20|5.2.*",
+        "illuminate/contracts": "~5.1.20|5.2.*",
+        "illuminate/database": "~5.1.20|5.2.*"
     },
     "require-dev": {
-        "illuminate/cache": "5.1.20 - 5.4",
-        "illuminate/console": "5.1.20 - 5.4",
-        "mockery/mockery": "^0.9.5",
+        "illuminate/cache": "~5.1.20|5.2.*",
+        "illuminate/console": "~5.1.20|5.2.*",
         "phpunit/phpunit": "^4.8"
     },
     "suggest": {
-        "illuminate/cache": "Allows caching bouncer's database queries",
+        "illuminate/cache": "Allows caching the bouncer's database queries",
         "illuminate/console": "Allows running registered bouncer seeders via artisan"
     }
 }
